Registrando os serviços no container DI

--- a/APICatalago/APICatalago/appsettings.json
+++ b/APICatalago/APICatalago/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnections": "Server=localhost;DataBase=CatalogoDB;uid=roor;Pwd=********"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
