Arrumando a conexão com o MySQL

--- a/APICatalago/APICatalago/appsettings.json
+++ b/APICatalago/APICatalago/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnections": "Server=localhost;DataBase=CatalogoDB;uid=roor;Pwd=********"
+    "DefaultConnections": "Server=localhost;DataBase=CatalogoDB;uid=root;Pwd=;"
   },
   "Logging": {
     "LogLevel": {
